--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 
         <dependency>
             <groupId>io.github.cdimascio</groupId>
-            <artifactId>java-dotenv</artifactId>
-            <version>5.2.2</version>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.3.2</version>
         </dependency>
     </dependencies>
 
