--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,10 @@ MYSQL_USER=escaperoom_user
 MYSQL_PASSWORD=
 
 # MYSQL_PORT=3306
+
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_ROOT_PASSWORD=12345
+MONGO_DATABASE=escapeRoomMongo
+MONGO_USER=escaperoom_mongo_user
+MONGO_PASSWORD=
